@startuml Class_Diagram

hide circle
skinparam linetype ortho
skinparam nodesep 60
skinparam ranksep 80
skinparam classAttributeIconSize 0
skinparam classBackgroundColor white
skinparam classBorderColor black
skinparam ArrowColor black
skinparam DefaultFontColor black

title Class Diagram - Learning Management System (LeMas)

class Role {
  +id: Int
  +nama: String
}

class User {
  +nomorInduk: String
  +nama: String
  +email: String
  +password: String
  +telepon: String
  +fotoUrl: String
  +roleId: Int
  +login(): void
  +logout(): void
  +updateProfile(): void
}

class Mahasiswa {
  +nim: String
  +nomorInduk: String
  +getDashboardData(): void
  +lihatTranskrip(): void
}

class Dosen {
  +nip: String
  +nomorInduk: String
  +nidn: String
  +bidang: String
  +ruangKantor: String
  +getDashboardData(): void
}

class MataKuliah {
  +idMataKuliah: Int
  +namaMataKuliah: String
  +nipDosen: String
  +semester: Int
  +jadwal: String
  +waktu: String
  +sks: Int
  +getDetail(): void
  +create(): void
  +update(): void
  +delete(): void
}

class Nilai {
  +idNilai: Int
  +nomorInduk: String
  +idMataKuliah: Int
  +nilaiTugas: Decimal
  +nilaiKuis: Decimal
  +nilaiAkhir: Decimal
  +semester: Int
  +inputNilai(): void
  +updateNilai(): void
  +getTranskrip(): void
}

class Kuis {
  +idKuis: Int
  +idMataKuliah: Int
  +judul: String
  +deadlineKuis: DateTime
  +skor: Int
  +buatKuis(): void
  +hapusKuis(): void
  +getHasilKuis(): void
}

class JawabanKuis {
  +idJawabanKuis: Int
  +idKuis: Int
  +nim: String
  +skor: Int
  +jawaban: String
  +tanggalKerja: DateTime
  +submitJawaban(): void
}

class Soal {
  +idSoal: Int
  +idKuis: Int
  +pertanyaan: String
  +kunciJawaban: String
  +skor: Int
  +tambahSoal(): void
}

class PilihanJawaban {
  +idPilihan: Int
  +idSoal: Int
  +teksJawaban: String
}

class ForumDiskusi {
  +idForumDiskusi: Int
  +idMataKuliah: Int
  +judul: String
  +isiForum: String
  +lampiran: String
  +createdAt: DateTime
  +nomorInduk: String
  +buatThread(): void
  +getThreads(): void
}

class KomentarForum {
  +idKomentar: Int
  +nomorInduk: String
  +idForum: Int
  +isiKomentar: String
  +createdAt: DateTime
  +tambahKomentar(): void
}

class LikeForum {
  +idLike: Int
  +nomorInduk: String
  +idForum: Int
  +toggleLike(): void
}

class ModulAjar {
  +idModulAjar: Int
  +idMataKuliah: Int
  +judul: String
  +tipe_modul: String
  +deskripsi: String
  +url: String
  +fileUrl: String
  +ukuran: String
  +tanggal: DateTime
  +diunduh: Int
  +canDownload: Boolean
  +uploadModul(): void
  +downloadModul(): void
}

class ProgressMateri {
  +idProgress: Int
  +idModulAjar: Int
  +nim: String
  +status: String
  +tanggalAkses: DateTime
  +catatProgress(): void
}

class Kelompok {
  +idKelompok: Int
  +idMataKuliah: Int
  +namaKelompok: String
  +warna: String
  +tugasName: String
  +progress: Int
  +status: String
  +submitted: Boolean
  +buatKelompok(): void
  +hapusKelompok(): void
}

class AnggotaKelompok {
  +idAnggota: Int
  +idKelompok: Int
  +nim: String
  +nilaiTugas: Decimal
  +tambahAnggota(): void
  +hapusAnggota(): void
}

class Tugas {
  +idTugas: Int
  +idMataKuliah: Int
  +nim: String
  +judul: String
  +tipeTugas: String
  +detailTugas: String
  +deadlineTugas: DateTime
  +fileJawaban: String
  +fileTugas: String
  +namaFileTugas: String
  +tipeFileTugas: String
  +ukuranFile: String
  +buatTugas(): void
  +perpanjangDeadline(): void
}

class Presensi {
  +idPresensi: Int
  +nim: String
  +idMataKuliah: Int
  +tanggalPertemuan: DateTime
  +waktuPresensi: DateTime
  +statusKehadiran: String
  +bukaSesiQR(): void
  +scanQR(): void
  +updateManual(): void
}

class ProgressTugas {
  +idTugas: Int
  +idMataKuliah: Int
  +nim: String
  +judul: String
  +detailTugas: String
  +deadlineTugas: DateTime
  +fileJawaban: String
  +updateProgress(): void
}

class PengumpulanTugas {
  +idPengumpulan: Int
  +idKelompok: Int
  +idTugas: Int
  +nim: String
  +judul: String
  +detailTugas: String
  +deadlineTugas: DateTime
  +fileJawaban: String
  +submitTugas(): void
}

class Notifikasi {
  +idNotifikasi: Int
  +nim: String
  +judul: String
  +pesan: String
  +tipe: String
  +isRead: Boolean
  +createdAt: DateTime
  +idRef: Int
  +tipeRef: String
  +markAsRead(): void
  +getUnreadCount(): void
}

' Relasi
Role "1" -- "0..*" User
User "1" -- "0..1" Mahasiswa
User "1" -- "0..1" Dosen
Dosen "0..1" -- "0..*" MataKuliah
MataKuliah "1" -- "0..*" Nilai
User "1" -- "0..*" Nilai
MataKuliah "1" -- "0..*" Kuis
Kuis "1" -- "0..*" Soal
Soal "1" -- "0..*" PilihanJawaban
Kuis "1" -- "0..*" JawabanKuis
Mahasiswa "1" -- "0..*" JawabanKuis
MataKuliah "1" -- "0..*" ForumDiskusi
User "1" -- "0..*" ForumDiskusi
ForumDiskusi "1" -- "0..*" KomentarForum
User "1" -- "0..*" KomentarForum
ForumDiskusi "1" -- "0..*" LikeForum
User "1" -- "0..*" LikeForum
MataKuliah "1" -- "0..*" ModulAjar
ModulAjar "1" -- "0..*" ProgressMateri
Mahasiswa "1" -- "0..*" ProgressMateri
MataKuliah "1" -- "0..*" Kelompok
Kelompok "1" -- "0..*" AnggotaKelompok
Mahasiswa "1" -- "0..*" AnggotaKelompok
MataKuliah "1" -- "0..*" Tugas
Mahasiswa "1" -- "0..*" Tugas
Kelompok "0..1" -- "0..*" PengumpulanTugas
Tugas "1" -- "0..*" PengumpulanTugas
Mahasiswa "1" -- "0..*" PengumpulanTugas
MataKuliah "1" -- "0..*" ProgressTugas
Mahasiswa "1" -- "0..*" ProgressTugas
MataKuliah "1" -- "0..*" Presensi
Mahasiswa "1" -- "0..*" Presensi
Mahasiswa "1" -- "0..*" Notifikasi

@enduml
